--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,13 @@
 {
-  "short_name": "React App",
+  "short_name": "Geoffrey's Portfolio",
   "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "author": "Gregor Cresnar",
+      "source": "https://www.flaticon.com/authors/gregor-cresnar"
     }
   ],
   "start_url": ".",
