--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://geoffreyhanson.github.io/reactPortfolio/",
   "dependencies": {
+    "npm": "^6.13.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
