--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geoffreyhanson.github.io/reactPortfolio/",
+  "homepage": "https://geoffrey-hanson.herokuapp.com/",
   "dependencies": {
     "npm": "^6.13.3",
     "prop-types": "^15.7.2",
