--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geoffrey-hanson.herokuapp.com/",
+  "homepage": "https://www.geoffreyhanson.com/",
   "dependencies": {
     "npm": "^6.13.4",
     "prop-types": "^15.7.2",
@@ -35,10 +35,11 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "gh-pages": "^2.0.1"
   }
